# comparar_fundos_br

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
comparar_fundos_br/: __init__.py  benchmarks.py  comparador.py  get_brfunds.py  setup.py  version.py
comparebrfunds/: __init__.py  benchmarks.py  comparador.py  getfunds.py  version.py
src/comparar_fundos_br/: __init__.py  benchmarks.py  comparador.py  fundosbr.py  get_brfunds.py
tests/: test_brinfofunds.py
