[tool.poetry]
name = "comparar_fundos_br"
version = "0.1.1"
description = ""
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = [
    {version = ">=1.2.4,<=1.5.3", python = "<=3.9"},
    {version = ">=2.2.3", python = ">=3.10"}
]
seaborn = "^0.11.2"
requests = "^2.28.1"
yfinance = "^0.2.52"
DateTime = "^4.5"
scipy = [
    {version = ">=1.7,<1.9.1", python = "<3.9"},
    {version = ">=1.13.1", python = ">=3.9"}
]
matplotlib = [
    {version = "<=3.7.1", python = "<=3.9"},
    {version = ">=3.10.0", python = ">=3.10"}
]
pyettj = [
    {version = ">=0.3.0,<0.3.2", python = "<=3.9"},
    {version = ">=0.3.3", python = ">=3.10"}
]
tesouro-direto-br = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"